4.24

- Added: Max_camp_cnt_method mission parameter by longtimegamer
- Changed: Make use of new triggerinterval stuff to run scripts at a specific time 
- Changed: Added setTriggerinterval as new parameter to createTrigger and createTriggerLocal functions (by alexvladn)
- Changed: Teamkillers are no longer pushed to the server lobby (slot selection) but they now can listen to a song in jail (something with bananas :))
- Changed: Updated Korean translation by kkim
- Changed: Launcher cooldown time is no longer set by launcher class name but is the same for all
- Changed: Removed searchlight from GMCWG version vehicles
- Changed: Always use BIS Virtual Arsenal instead of ACE arsenal if ACE is available (ACE arsenal causes issues when mods like GM run, loads vanilla A3 weapons too instead of only GM weapons for example)
- Fixed: Added missing light attack chopper for independent side
- Fixed: Some SLA CfgGroup names and sections got renamed in the CUP update resulting in spawning no groups
- Fixed: CUP composition objects were spawned under or half in the ground
- Fixed: In the GMCWG versions enemy AI infantry didn't spawn because CfgGroups class names have changed
- Fixed: Some vehicles at base were placed half in the ground in the IFA3 version