@@ -8,6 +8,12 @@
 - Changed: Launcher cooldown time is no longer set by launcher class name but is the same for all
 - Changed: Removed searchlight from GMCWG version vehicles
 - Changed: Always use BIS Virtual Arsenal instead of ACE arsenal if ACE is available (ACE arsenal causes issues when mods like GM run, loads vanilla A3 weapons too instead of only GM weapons for example)
+- Changed: You can now select between
+             - All camps captured and radio tower destroyed
+             - Low number of AI units, all camps captured and radio tower destroyed
+             - Low number of AI units and radio tower destroyed
+           for "Seize condition for main target:" (d_ao_check_for_ai in description.ext).
+		   Second one is default (d_ao_check_for_ai = 1)
 - Fixed: Added missing light attack chopper for independent side
 - Fixed: Some SLA CfgGroup names and sections got renamed in the CUP update resulting in spawning no groups
 - Fixed: CUP composition objects were spawned under or half in the ground
